--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 !.yarn/releases
 !.yarn/versions
 
+# logs
+/logs
+
 # testing
 /coverage
 
@@ -39,3 +42,15 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+*storybook.log
+
+# Sentry Config File
+.env.sentry-build-plugin
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
