--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "nextjs-15-boilerplate",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.5.2",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "echo \"Test runs\""
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,mjs}": [
