refactor(github): add pwd to ensure it is a correct repo path

--- a/.github/workflows/deployMydevilProd.yml
+++ b/.github/workflows/deployMydevilProd.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.MYDEVIL_USER }}@${{ secrets.MYDEVIL_HOST }} << 'EOF'
           cd ${{ secrets.MYDEVIL_REPO_PATH }}
+          pwd
           git pull origin main
           pnpm install
           pnpm build
