fix(github): fix domain restart command

--- a/.github/workflows/deployMydevilProd.yml
+++ b/.github/workflows/deployMydevilProd.yml
@@ -28,6 +28,6 @@ jobs:
           pwd
           git pull origin main
           pnpm install
-          pnpm build-no-lint
-          devil www restart 
+          pnpm build --no-lint
+          devil www restart ${{ secrets.MYDEVIL_DOMAIN }}
           EOF
