--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "prepare": "husky",
-    "test": "echo \"Test runs\""
+    "test": "jest"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,mjs}": [
