--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "test:watch": "jest --watch",
     "e2e": "pnpm exec playwright test",
     "e2e:ui": "pnpm exec playwright test --ui",
-    "e2e:debug": "pnpm exec playwright test --debug"
+    "e2e:debug": "pnpm exec playwright test --debug",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_484ff2aad1c8520"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,mjs}": [
@@ -33,12 +36,21 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "3.2.5",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
     "@next/eslint-plugin-next": "^15.2.1",
     "@playwright/test": "^1.51.0",
+    "@storybook/addon-essentials": "8.6.4",
+    "@storybook/addon-onboarding": "8.6.4",
+    "@storybook/blocks": "8.6.4",
+    "@storybook/experimental-addon-test": "8.6.4",
+    "@storybook/experimental-nextjs-vite": "8.6.4",
+    "@storybook/nextjs": "8.6.4",
+    "@storybook/react": "8.6.4",
+    "@storybook/test": "8.6.4",
     "@tailwindcss/postcss": "^4.0.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -48,6 +60,9 @@
     "@types/node": "^20.17.23",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@vitest/browser": "^3.0.8",
+    "@vitest/coverage-v8": "^3.0.8",
+    "chromatic": "^11.27.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.21.0",
     "eslint-config-next": "15.2.1",
@@ -59,6 +74,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-storybook": "^0.11.4",
     "eslint-plugin-testing-library": "^7.1.1",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
@@ -67,12 +83,15 @@
     "jest-json-schema": "^6.1.0",
     "lint-staged": "^15.4.3",
     "msw": "^2.7.3",
+    "playwright": "^1.51.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "storybook": "8.6.4",
     "tailwindcss": "^4.0.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0"
+    "typescript-eslint": "^8.26.0",
+    "vitest": "^3.0.8"
   },
   "config": {
     "commitizen": {
@@ -82,6 +101,11 @@
   "msw": {
     "workerDirectory": [
       "public"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
     ]
   }
 }
