--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "e2e:ui": "pnpm exec playwright test --ui",
     "e2e:debug": "pnpm exec playwright test --debug",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_484ff2aad1c8520"
+    "build-storybook": "storybook build  -o ./public/storybook",
+    "serve-storybook": "serve storybook-static",
+    "chromatic": "dotenv -e .env.local npx chromatic"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,mjs}": [
@@ -64,6 +65,7 @@
     "@vitest/coverage-v8": "^3.0.8",
     "chromatic": "^11.27.0",
     "cz-conventional-changelog": "^3.3.0",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9.21.0",
     "eslint-config-next": "15.2.1",
     "eslint-config-prettier": "^10.1.1",
@@ -71,6 +73,7 @@
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-jest-dom": "^5.5.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-playwright": "^2.2.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -106,6 +109,14 @@
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
+    ]
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "core-js-pure",
+      "esbuild",
+      "msw",
+      "sharp"
     ]
   }
 }
