fix(storybook): fix staticDir property

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "e2e:ui": "pnpm exec playwright test --ui",
     "e2e:debug": "pnpm exec playwright test --debug",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build  -o ./public/storybook",
+    "build-storybook": "storybook build",
     "serve-storybook": "serve storybook-static",
     "chromatic": "dotenv -e .env.local npx chromatic"
   },
