--- a/.github/workflows/deployVercelPreview.yml
+++ b/.github/workflows/deployVercelPreview.yml
@@ -25,6 +25,12 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Install Storybook
+        run: pnpm install @storybook/react @storybook/addon-actions @storybook/addon-links @storybook/addons
+
+      - name: Build Storybook
+        run: pnpm build-storybook -o storybook-static
+
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
@@ -33,3 +39,6 @@ jobs:
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Deploy Storybook to Vercel
+        run: vercel --prod --token=${{ secrets.VERCEL_TOKEN }} --scope ${{ secrets.VERCEL_ORG_ID }} --project ${{ secrets.VERCEL_PROJECT_ID }} --confirm --cwd storybook-static
