--- a/.github/workflows/deployChromatic.yml
+++ b/.github/workflows/deployChromatic.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
@@ -19,6 +24,6 @@ jobs:
         run: pnpm install
 
       - name: Deploy to Chromatic
-        uses: chromaui/action@v1
+        uses: chromaui/action@latest
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
