--- a/.github/workflows/deployChromatic.yml
+++ b/.github/workflows/deployChromatic.yml
@@ -13,16 +13,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 22
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
-
       - name: Deploy to Chromatic
         uses: chromaui/action@latest
         with:
