--- a/.github/workflows/deployChromatic.yml
+++ b/.github/workflows/deployChromatic.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Deploy to Chromatic
-        uses: chromaui/action@latest
+        uses: chromaui/action@v1
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
