--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
     "next": "15.2.1",
+    "pino": "^9.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.24.2"
@@ -86,6 +87,7 @@
     "jest-json-schema": "^6.1.0",
     "lint-staged": "^15.4.3",
     "msw": "^2.7.3",
+    "pino-pretty": "^13.0.0",
     "playwright": "^1.51.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
