--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "storybook": "8.6.4",
     "tailwindcss": "^4.0.11",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.0",
