chore(eslint): change config for using semicolons

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,10 @@
 {
-    "trailingComma": "all",
-    "semi": false,
-    "tabWidth": 2,
-    "singleQuote": true,
-    "printWidth": 80,
-    "endOfLine": "lf",
-    "arrowParens": "always",
-    "plugins": ["prettier-plugin-tailwindcss"]
+  "trailingComma": "all",
+  "semi": true,
+  "tabWidth": 2,
+  "singleQuote": true,
+  "printWidth": 80,
+  "endOfLine": "lf",
+  "arrowParens": "always",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
