--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "next": "15.2.1",
     "pino": "^9.6.0",
+    "pino-logflare": "^0.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.24.2"
