feat(semantic-release): add semantic release feature including config, and github workflow

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "prepare": "husky",
+    "release": "semantic-release",
     "test": "jest",
     "test:watch": "jest --watch",
     "e2e": "pnpm exec playwright test",
@@ -40,12 +41,19 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.5",
-    "@commitlint/cli": "^19.7.1",
+    "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
     "@next/eslint-plugin-next": "^15.2.1",
     "@playwright/test": "^1.51.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/exec": "^7.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@storybook/addon-essentials": "8.6.4",
     "@storybook/addon-onboarding": "8.6.4",
     "@storybook/blocks": "8.6.4",
@@ -92,6 +100,7 @@
     "playwright": "^1.51.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "semantic-release": "^24.2.3",
     "storybook": "8.6.4",
     "tailwindcss": "^4.0.11",
     "ts-jest": "^29.2.6",
