--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,13 +12,13 @@
     [
       "@semantic-release/changelog",
       {
-        "changelogFile": "docs/CHANGELOG.md"
+        "changelogFile": "CHANGELOG.md"
       }
     ],
     [
       "@semantic-release/github",
       {
-        "assets": ["docs/CHANGELOG.md"]
+        "assets": ["CHANGELOG.md"]
       }
     ],
     [
