--- a/.releaserc.json
+++ b/.releaserc.json
@@ -16,6 +16,13 @@
       }
     ],
     [
+      "@semantic-release/git",
+      {
+        "assets": ["CHANGELOG.md", "package.json"],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }
+    ],
+    [
       "@semantic-release/github",
       {
         "assets": ["CHANGELOG.md"]
