--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     ],
     "*.{json,css,scss,md,yml,yaml}": [
       "prettier --write"
+    ],
+    "{package.json,js,jsx,ts,tsx}": [
+      "bash -c \"pnpm depcheck\""
     ]
   },
   "dependencies": {
