--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,8 @@ jobs:
         run: pnpm install
 
       - name: Run semantic release
-        run: pnpm run release
+        run: |
+          export HUSKY_SKIP_HOOKS=1
+          pnpm run release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
