--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "build:turbo": "next build",
     "build-no-lint": "next build --no-lint",
     "start": "next start",
     "lint": "next lint",
@@ -36,27 +37,27 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
-    "next": "15.2.1",
-    "pino": "^9.6.0",
+    "next": "15.4.6",
+    "pino": "^9.9.0",
     "pino-logflare": "^0.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zod": "^3.24.2"
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.5",
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.21.0",
-    "@next/eslint-plugin-next": "^15.2.1",
-    "@playwright/test": "^1.51.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.33.0",
+    "@next/eslint-plugin-next": "15.4.6",
+    "@playwright/test": "^1.54.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
-    "@semantic-release/exec": "^7.0.3",
+    "@semantic-release/exec": "^7.1.0",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^11.0.1",
-    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/github": "^11.0.4",
+    "@semantic-release/npm": "^12.0.2",
     "@semantic-release/release-notes-generator": "^14.0.3",
     "@storybook/addon-essentials": "8.6.4",
     "@storybook/addon-onboarding": "8.6.4",
@@ -66,55 +67,55 @@
     "@storybook/nextjs": "8.6.4",
     "@storybook/react": "8.6.4",
     "@storybook/test": "8.6.4",
-    "@tailwindcss/postcss": "^4.0.11",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.14",
     "@types/jest-json-schema": "^6.1.4",
-    "@types/node": "^20.17.23",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitest/browser": "^3.0.8",
-    "@vitest/coverage-v8": "^3.0.8",
-    "chromatic": "^11.27.0",
+    "@types/node": "^20.19.11",
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "chromatic": "^13.1.3",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv-cli": "^8.0.0",
-    "eslint": "^9.21.0",
-    "eslint-config-next": "15.2.1",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^28.11.0",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "15.4.6",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-jest-dom": "^5.5.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-playwright": "^2.2.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-playwright": "^2.2.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-storybook": "^0.11.4",
-    "eslint-plugin-testing-library": "^7.1.1",
-    "globals": "^16.0.0",
+    "eslint-plugin-storybook": "^9.1.3",
+    "eslint-plugin-testing-library": "^7.6.6",
+    "globals": "^16.3.0",
     "handlebars-helpers": "^0.10.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-json-schema": "^6.1.0",
-    "lint-staged": "^15.4.3",
-    "msw": "^2.7.3",
-    "pino-pretty": "^13.0.0",
-    "playwright": "^1.51.0",
+    "lint-staged": "^16.1.5",
+    "msw": "^2.10.5",
+    "pino-pretty": "^13.1.1",
+    "playwright": "^1.54.2",
     "plop": "^4.0.1",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "semantic-release": "^24.2.3",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "semantic-release": "^24.2.7",
     "skott": "^0.35.4",
     "storybook": "8.6.4",
-    "tailwindcss": "^4.0.11",
-    "ts-jest": "^29.2.6",
+    "tailwindcss": "^4.1.12",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0",
-    "vitest": "^3.0.8"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.40.0",
+    "vitest": "^3.2.4"
   },
   "config": {
     "commitizen": {
@@ -133,13 +134,19 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
       "core-js-pure",
       "esbuild",
       "msw",
-      "sharp"
+      "sharp",
+      "unrs-resolver"
     ],
     "ignoredBuiltDependencies": [
       "@parcel/watcher"
-    ]
+    ],
+    "overrides": {
+      "@types/react": "19.1.10",
+      "@types/react-dom": "19.1.7"
+    }
   }
 }
