feat(env): add CODECOV_TOKEN to environment configuration and tests

--- a/.github/workflows/deployVercelProd.yml
+++ b/.github/workflows/deployVercelProd.yml
@@ -28,6 +28,8 @@ jobs:
         run: pnpm install
       - name: Run tests
         run: pnpm test
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
 
   Deploy-Production:
     needs: test
