fix(env): remove CODECOV_TOKEN from environment variables

--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
       "@tailwindcss/oxide",
       "core-js-pure",
       "esbuild",
+      "highlight.js",
       "msw",
       "sharp",
       "unrs-resolver"
