chore(reBnovate): disable Storybook-related dependencies from auto-updates

--- a/.github/workflows/renovate.json
+++ b/.github/workflows/renovate.json
@@ -61,7 +61,7 @@
         "@chromatic-com/*",
         "chromatic"
       ],
-      "groupName": "storybook-updates"
+      "enabled": false
     }
   ],
   "dependencyDashboard": true,
