--- a/package.json
+++ b/package.json
@@ -59,14 +59,8 @@
     "@semantic-release/github": "^11.0.4",
     "@semantic-release/npm": "^12.0.2",
     "@semantic-release/release-notes-generator": "^14.0.3",
-    "@storybook/addon-essentials": "8.6.4",
     "@storybook/addon-onboarding": "9.1.3",
-    "@storybook/blocks": "8.6.4",
-    "@storybook/experimental-addon-test": "8.6.4",
-    "@storybook/experimental-nextjs-vite": "8.6.4",
     "@storybook/nextjs": "9.1.3",
-    "@storybook/react": "9.1.3",
-    "@storybook/test": "8.6.4",
     "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
@@ -115,7 +109,10 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@storybook/nextjs-vite": "9.1.3",
+    "@storybook/addon-vitest": "9.1.3",
+    "@storybook/addon-docs": "9.1.3"
   },
   "config": {
     "commitizen": {
