--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     ]
   },
   "dependencies": {
+    "@mdx-js/react": "^3.1.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "markdown-to-jsx": "^7.7.13",
     "next": "15.4.6",
     "pino": "^9.9.0",
     "pino-logflare": "^0.4.2",
@@ -59,8 +61,11 @@
     "@semantic-release/github": "^11.0.4",
     "@semantic-release/npm": "^12.0.2",
     "@semantic-release/release-notes-generator": "^14.0.3",
+    "@storybook/addon-docs": "9.1.3",
     "@storybook/addon-onboarding": "9.1.3",
+    "@storybook/addon-vitest": "9.1.3",
     "@storybook/nextjs": "9.1.3",
+    "@storybook/nextjs-vite": "9.1.3",
     "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
@@ -109,10 +114,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0",
-    "vitest": "^3.2.4",
-    "@storybook/nextjs-vite": "9.1.3",
-    "@storybook/addon-vitest": "9.1.3",
-    "@storybook/addon-docs": "9.1.3"
+    "vitest": "^3.2.4"
   },
   "config": {
     "commitizen": {
