--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:no-turbo": "next dev",
     "build": "next build",
     "build:turbo": "next build",
     "build-no-lint": "next build --no-lint",
@@ -37,23 +38,23 @@
   },
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
-    "@t3-oss/env-nextjs": "^0.12.0",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "markdown-to-jsx": "^7.7.13",
-    "next": "15.4.6",
+    "next": "15.5.0",
     "pino": "^9.9.0",
-    "pino-logflare": "^0.4.2",
+    "pino-logflare": "^0.5.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "zod": "^4.0.17"
+    "zod": "^4.1.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.1",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.33.0",
-    "@next/eslint-plugin-next": "15.4.6",
-    "@playwright/test": "^1.54.2",
+    "@eslint/js": "^9.34.0",
+    "@next/eslint-plugin-next": "15.5.0",
+    "@playwright/test": "^1.55.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/exec": "^7.1.0",
@@ -68,20 +69,20 @@
     "@storybook/nextjs-vite": "9.1.3",
     "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.14",
     "@types/jest-json-schema": "^6.1.4",
     "@types/node": "^20.19.11",
-    "@types/react": "19.1.10",
+    "@types/react": "19.1.11",
     "@types/react-dom": "19.1.7",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "chromatic": "^13.1.3",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv-cli": "^8.0.0",
-    "eslint": "^9.33.0",
-    "eslint-config-next": "15.4.6",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "15.5.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest": "^29.0.1",
@@ -102,7 +103,7 @@
     "lint-staged": "^16.1.5",
     "msw": "^2.10.5",
     "pino-pretty": "^13.1.1",
-    "playwright": "^1.54.2",
+    "playwright": "^1.55.0",
     "plop": "^4.0.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
