--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
+    "@sentry/nextjs": "^10.5.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "markdown-to-jsx": "^7.7.13",
     "next": "15.5.0",
