feat(sentry): update vercel actions, add sentry config to build steps

--- a/.github/workflows/deployVercelPreview.yml
+++ b/.github/workflows/deployVercelPreview.yml
@@ -53,6 +53,14 @@ jobs:
 
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ozi
+          SENTRY_PROJECT: nextjs-15-boilerplate
 
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ozi
+          SENTRY_PROJECT: nextjs-15-boilerplate
