fix(actions): add @sentry/cli to pnpm install in vercel, fix labeler.yml format

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,7 +1,6 @@
-# .github/labeler.yml
 frontend:
-  - src/app/**/*
+  - 'src/app/**/*'
 backend:
-  - src/lib/**/*
+  - 'src/lib/**/*'
 tests:
-  - tests/**/*
+  - 'tests/**/*'
