--- a/.github/workflows/deployVercelProd.yml
+++ b/.github/workflows/deployVercelProd.yml
@@ -45,7 +45,7 @@ jobs:
           node-version: '22'
 
       - name: Install pnpm
-        run: npm install -g pnpm depcheck madge
+        run: npm install -g pnpm depcheck madge  @sentry/cli
 
       - name: Install Dependencies
         run: pnpm install
