fix(actions): fix config layout, add checkout action to workflow fot label workflow

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,6 +1,11 @@
 frontend:
-  - 'src/app/**/*'
+  - any-of:
+      - 'src/app/**/*'
+
 backend:
-  - 'src/lib/**/*'
+  - any-of:
+      - 'src/lib/**/*'
+
 tests:
-  - 'tests/**/*'
+  - any-of:
+      - 'tests/**/*'
