--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -3,16 +3,12 @@ name: Auto Assign PRs
 
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [opened]
 
 jobs:
   assign:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Auto-label PRs
-        uses: actions/labeler@v5
+      - uses: kentaro-m/auto-assign-action@v1.2.1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
