fix(actions): fix config and add lhci-cli to dev deps

--- a/.github/workflows/deployVercelPreview.yml
+++ b/.github/workflows/deployVercelPreview.yml
@@ -83,3 +83,5 @@ jobs:
 
       - name: Run Lighthouse Audit
         run: lhci autorun
+        env:
+          LHCI_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
