--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -6,17 +6,20 @@
       ],
       "numberOfRuns": 3
     },
+    "upload": {
+      "target": "lhci",
+      "serverBaseUrl": "https://lighthouse.wmitrus.usermd.net",
+      "token": "16cf049f-bced-4a3d-a9fa-bff9784e0e72"
+    },
     "assert": {
       "assertions": {
-        "categories:performance": ["error", { "minScore": 0.8 }],
-        "categories:accessibility": ["warn", { "minScore": 0.7 }],
-        "categories:seo": ["warn", { "minScore": 0.7 }],
-        "unused-javascript": ["warn", { "maxLength": 10 }],
-        "legacy-javascript": ["warn", { "maxLength": 10 }]
+        "categories:performance": ["error", { "minScore": 0.2 }],
+        "categories:accessibility": ["warn", { "minScore": 0.2 }],
+        "categories:seo": ["warn", { "minScore": 0.2 }],
+        "unused-javascript": ["warn", { "maxLength": 20 }],
+        "legacy-javascript": ["warn", { "maxLength": 20 }],
+        "bf-cache": "off"
       }
-    },
-    "upload": {
-      "target": "temporary-public-storage"
     }
   }
 }
