--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.34.0",
+    "@lhci/cli": "^0.15.1",
     "@next/eslint-plugin-next": "15.5.0",
     "@playwright/test": "^1.55.0",
     "@semantic-release/changelog": "^6.0.3",
