--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.34.0",
     "@lhci/cli": "^0.15.1",
+    "@next/bundle-analyzer": "^15.5.0",
     "@next/eslint-plugin-next": "15.5.0",
     "@playwright/test": "^1.55.0",
     "@semantic-release/changelog": "^6.0.3",
@@ -68,6 +69,7 @@
     "@semantic-release/github": "^11.0.4",
     "@semantic-release/npm": "^12.0.2",
     "@semantic-release/release-notes-generator": "^14.0.3",
+    "@size-limit/file": "^11.2.0",
     "@storybook/addon-docs": "9.1.3",
     "@storybook/addon-onboarding": "9.1.3",
     "@storybook/addon-vitest": "9.1.3",
@@ -84,6 +86,7 @@
     "@types/react-dom": "19.1.7",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "bundlewatch": "^0.4.1",
     "chromatic": "^13.1.3",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv-cli": "^10.0.0",
@@ -114,7 +117,9 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "semantic-release": "^24.2.7",
+    "size-limit": "^11.2.0",
     "skott": "^0.35.4",
+    "source-map-explorer": "^2.5.3",
     "storybook": "9.1.3",
     "tailwindcss": "^4.1.12",
     "ts-jest": "^29.4.1",
