--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "lhci": "pnpm exec lhci autorun",
     "size": "size-limit",
     "size:build-check": "next build && size-limit",
-    "analyze": "ANALYZE=true next build",
-    "sme:client": "source-map-explorer '.next/static/chunks/*.js' --html client-sizes.html"
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,mjs}": [
@@ -49,19 +48,27 @@
     },
     {
       "path": ".next/static/chunks/main-*.js",
-      "limit": "70 KB"
+      "limit": "110 KB"
     },
     {
-      "path": ".next/static/chunks/*vendor*.js",
-      "limit": "200 KB"
+      "path": ".next/static/chunks/polyfills-*.js",
+      "limit": "50 KB"
+    },
+    {
+      "path": ".next/static/chunks/webpack-*.js",
+      "limit": "10 KB"
     },
     {
       "path": ".next/static/chunks/pages/*.js",
       "limit": "250 KB"
     },
     {
-      "path": ".next/static/chunks/*.css",
-      "limit": "80 KB"
+      "path": ".next/static/chunks/app/**/*.js",
+      "limit": "100 KB"
+    },
+    {
+      "path": ".next/static/css/*.css",
+      "limit": "50 KB"
     }
   ],
   "dependencies": {
@@ -114,6 +121,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "bundlewatch": "^0.4.1",
     "chromatic": "^13.1.3",
+    "cross-env": "^10.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv-cli": "^10.0.0",
     "eslint": "^9.34.0",
