--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "plop": "^4.0.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "require-in-the-middle": "^7.5.2",
     "semantic-release": "^24.2.7",
     "size-limit": "^11.2.0",
     "skott": "^0.35.4",
