fix(bundlewatch): add new script for bundlewatch do package.json and use it in playbook

--- a/.github/workflows/bundle-size.yml
+++ b/.github/workflows/bundle-size.yml
@@ -39,4 +39,4 @@ jobs:
       - run: pnpm size
       - env:
           BUNDLEWATCH_GITHUB_TOKEN: ${{ secrets.BUNDLEWATCH_GITHUB_TOKEN }}
-        run: pnpm bundlewatch --config .bundlewatch.config.json
+        run: pnpm bundlewatch:run
