fix(actions): add checkout action to auto-assign playbook

--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -14,6 +14,9 @@ jobs:
   assign:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Auto assign PR
         run: |
           gh pr edit ${{ github.event.pull_request.number }} --add-assignee wmitrus --add-reviewer wmitrus
