--- a/.github/workflows/deployVercelPreview.yml
+++ b/.github/workflows/deployVercelPreview.yml
@@ -81,15 +81,40 @@ jobs:
           SENTRY_ORG: ozi
           SENTRY_PROJECT: nextjs-15-boilerplate
 
-      - name: Wait for Vercel preview deployment to be ready
-        uses: patrickedqvist/wait-for-vercel-preview@v1.3.1
+      - name: Wait for Vercel preview deployment with bypass
         id: waitForVercel
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          max_timeout: 120
-          check_interval: 5
+        run: |
+          DEPLOY_URL=${{ steps.vercel_deploy.outputs.preview_url }}
+          echo "Waiting for deployment to be accessible with bypass headers..."
+          echo "url=$DEPLOY_URL" >> $GITHUB_OUTPUT
 
-      - name: Debug deployment URL
+          # Try to access the URL with bypass headers
+          retry_count=0
+          max_retries=24
+          until [ $retry_count -ge $max_retries ]
+          do
+            RESPONSE_CODE=$(curl -s -o /dev/null -w "%{http_code}" \
+              -H "x-vercel-protection-bypass: ${VERCEL_AUTOMATION_BYPASS_SECRET}" \
+              -H "x-vercel-set-bypass-cookie: true" \
+              $DEPLOY_URL)
+            
+            echo "GET status: $RESPONSE_CODE. Attempt $retry_count of $max_retries"
+            
+            if [ $RESPONSE_CODE -eq 200 ]; then
+              echo "Deployment is accessible with bypass headers"
+              exit 0
+            fi
+            
+            retry_count=$[$retry_count+1]
+            sleep 5
+          done
+
+          echo "Error: Timeout reached: Unable to connect to $DEPLOY_URL"
+          exit 1
+        env:
+          VERCEL_AUTOMATION_BYPASS_SECRET: ${{ secrets.VERCEL_AUTOMATION_BYPASS_SECRET }}
+
+      - name: Debug deployment URL with bypass
         run: |
           echo "Deployment URL: ${{ steps.waitForVercel.outputs.url }}"
           echo "Checking if URL is accessible with bypass header..."
@@ -97,7 +122,7 @@ jobs:
         env:
           VERCEL_AUTOMATION_BYPASS_SECRET: ${{ secrets.VERCEL_AUTOMATION_BYPASS_SECRET }}
 
-      - name: Run Lighthouse Audit
+      - name: Run Lighthouse Audit with bypass
         run: |
           echo "Running Lighthouse audit on URL: ${{ steps.waitForVercel.outputs.url }}"
           # Add a longer timeout for Lighthouse and include bypass headers
