refactor(actions): improve logging for initial deployment check response

--- a/.github/workflows/deployVercelPreview.yml
+++ b/.github/workflows/deployVercelPreview.yml
@@ -99,7 +99,7 @@ jobs:
             -H "x-vercel-set-bypass-cookie: samesitenone" \
             $DEPLOY_URL 2>/dev/null || echo "0")
 
-          echo "Initial check response code: $RESPONSE_CODE"
+          echo "Initial check response code is: $RESPONSE_CODE"
 
           # Always continue regardless of result
           echo "Warning: Deployment check completed but continuing with Lighthouse anyway: $DEPLOY_URL"
